<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:id="@+id/contenedor_menu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:background="@drawable/backgroun_user"
        android:textAlignment="textEnd"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />

        <QuickContactBadge
            android:id="@+id/pctFoto"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedor_register"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contenedor_menu"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnRegisterAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/register_attendance"
            tools:ignore="ObsoleteLayoutParam" />

        <ImageView
            android:id="@+id/imgAction"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/register_attendance"
            android:src="@drawable/up" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedor_error_connection"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contenedor_register"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh" />

        <TextView
            android:id="@+id/lblErrorConenction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/error_connection"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Red" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedor_without_account"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contenedor_error_connection"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/lblWithout_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/without_account"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Red" />
    </LinearLayout>

</RelativeLayout>